--- a/exps_setup.config
+++ b/exps_setup.config
@@ -1,3 +1,4 @@
+#% exps
 ## SetName = PCC7492
 ## Date_pool_expt_started = 
 ## Person = Nicholas
@@ -15,12 +16,12 @@
 ## Shaking = 200 rpm
 ## Condition_1 = Nitrate
 ## Concentration 1 low = 0 
-## Concentration 1 high = 30
+## Concentration 1 high = 300
 ## Concentration 1 n_increments = 8
 ## Units_1 = mM
 ## Condition_2 = Phosphate
 ## Concentration 2 low = 0
-## Concentration 2 high = 0.5
+## Concentration 2 high = 5
 ## Concentration 2 n_increments = 12
 ## Units_2 = mM
 ## Timecourse =  NA
@@ -28,3 +29,10 @@
 ## Growth Plate ID = NA
 ## Growth Plate wells = NA
 
+#% SETUP
+## Condition_1 Stock Conc. = 1
+## Condition_1 Stock Units = M
+## Condition_2 Stock Conc. = .1
+## Condition_2 Stock Units = M
+## Working Volume = 1
+## Working Volume Units = mL
