--- a/exps_setup.config
+++ b/exps_setup.config
@@ -6,7 +6,7 @@
 ## Description = phosphate-nitrate-temp-circadian
 ## gDNA plate = PCC7492_gDNA_plate1
 ## Sequenced At = NA 
-## Media = BG-11
+## Media = 10x BG-11
 ## Growth Method = flask
 ## Group = phosphate-nitrate
 ## Temperature = 37
